// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodToMongoSchema > should convert email_denied schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "L'email rejetée",
    },
    "reason": {
      "bsonType": "string",
      "enum": [
        "unsubscribe",
      ],
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "reason",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert email_events schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
    },
    "delivered_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "email": {
      "bsonType": "string",
      "description": "Addresse email",
    },
    "errors": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "message": {
            "bsonType": "string",
          },
          "type": {
            "bsonType": "string",
            "enum": [
              "fatal",
              "soft_bounce",
              "hard_bounce",
              "complaint",
              "invalid_email",
              "blocked",
              "error",
            ],
          },
        },
      },
    },
    "messageId": {
      "bsonType": [
        "string",
        "null",
      ],
    },
    "opened_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "template": {
      "anyOf": [
        {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "name": {
              "bsonType": "string",
            },
            "resetPasswordToken": {
              "bsonType": "string",
            },
            "to": {
              "bsonType": "string",
            },
          },
          "required": [
            "name",
            "to",
            "resetPasswordToken",
          ],
        },
      ],
    },
    "updated_at": {
      "bsonType": "date",
    },
  },
  "required": [
    "_id",
    "email",
    "template",
    "created_at",
    "updated_at",
    "opened_at",
    "delivered_at",
    "messageId",
    "errors",
  ],
}
`;

exports[`zodToMongoSchema > should convert sessions schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "expires_at": {
      "bsonType": "date",
      "description": "Date d'expiration",
    },
    "token": {
      "bsonType": "string",
      "description": "Token de la session",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "token",
    "updated_at",
    "created_at",
    "expires_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert source.acce schema 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "date_derniere_mise_a_jour": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "type_zone_uai": {
              "bsonType": "string",
            },
            "type_zone_uai_libe": {
              "bsonType": "string",
            },
            "zone": {
              "bsonType": "string",
            },
            "zone_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "numero_uai",
            "type_zone_uai",
            "type_zone_uai_libe",
            "zone",
            "zone_libe",
            "date_ouverture",
            "date_fermeture",
            "date_derniere_mise_a_jour",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "numero_uai": {
              "bsonType": "string",
            },
            "specificite_uai": {
              "bsonType": "string",
            },
            "specificite_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "numero_uai",
            "specificite_uai",
            "specificite_uai_libe",
            "date_ouverture",
            "date_fermeture",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai_mere": {
              "bsonType": "string",
            },
            "numero_uai_trouve": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_rattachement": {
              "bsonType": "string",
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai_trouve",
            "numero_uai_mere",
            "type_rattachement",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "academie": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "academie_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "adresse_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appariement_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "appellation_officielle": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "boite_postale_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_financiere_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "categorie_juridique": {
              "bsonType": "string",
            },
            "categorie_juridique_libe": {
              "bsonType": "string",
            },
            "code_postal_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "commune": {
              "bsonType": "string",
            },
            "commune_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "contrat_etablissement": {
              "bsonType": "string",
              "enum": [
                "99",
                "10",
                "30",
                "20",
                "50",
                "31",
                "21",
                "!!",
                "40",
                "41",
              ],
            },
            "contrat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Sans objet",
                "Hors contrat",
                "Contrat d'association pour toutes les classes",
                "Contrat simple pour toutes les classes",
                "Reconnu par l'Etat",
                "Contrat d'association pour une partie des classes",
                "Contrat simple pour une partie des classes",
                "Inconnu du gestionnaire",
                "Contrats simple et d'association pour toutes les classes",
                "Contrats simple et d'association pour une partie des classes",
              ],
            },
            "coordonnee_x": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "coordonnee_y": {
              "bsonType": [
                "number",
                "null",
              ],
            },
            "date_derniere_mise_a_jour": {
              "bsonType": "string",
            },
            "date_fermeture": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_geolocalisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "date_ouverture": {
              "bsonType": "string",
            },
            "denomination_principale": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "departement_insee_3_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "etat_etablissement": {
              "bsonType": "string",
              "enum": [
                "1",
                "2",
                "3",
                "4",
              ],
            },
            "etat_etablissement_libe": {
              "bsonType": "string",
              "enum": [
                "Ouvert",
                "À fermer",
                "À ouvrir",
                "Fermé",
              ],
            },
            "etat_sirad_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "hebergement_etablissement": {
              "bsonType": "string",
            },
            "hebergement_etablissement_libe": {
              "bsonType": "string",
            },
            "lieu_dit_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localisation_complement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "localite_acheminement_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mel_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "mention_distribution": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ministere_tutelle": {
              "bsonType": "string",
              "pattern": "^\\\\d{2}$",
            },
            "ministere_tutelle_libe": {
              "bsonType": "string",
            },
            "nature_uai": {
              "bsonType": "string",
              "pattern": "^\\\\d{3}$",
            },
            "nature_uai_libe": {
              "bsonType": "string",
            },
            "niveau_uai": {
              "bsonType": "string",
              "enum": [
                "1",
                "3",
                "2",
                "4",
              ],
            },
            "niveau_uai_libe": {
              "bsonType": "string",
              "enum": [
                "UAI célibataire",
                "UAI fille",
                "UAI mère",
                "UAI mère et fille",
              ],
            },
            "numero_finess_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_siren_siret_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telecopieur_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_telephone_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "numero_uai_fille": {
              "bsonType": "string",
            },
            "numero_uai_trouve": {
              "bsonType": "string",
            },
            "patronyme_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays": {
              "bsonType": "string",
            },
            "pays_etranger_acheminement": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "pays_libe": {
              "bsonType": "string",
            },
            "secteur_public_prive": {
              "bsonType": "string",
              "enum": [
                "PR",
                "PU",
              ],
            },
            "secteur_public_prive_libe": {
              "bsonType": "string",
              "enum": [
                "Privé",
                "Public",
              ],
            },
            "sigle_uai": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "site_web": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "situation_comptable": {
              "bsonType": "string",
            },
            "situation_comptable_libe": {
              "bsonType": "string",
            },
            "source": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "tutelle_2": {
              "anyOf": [
                {
                  "bsonType": "string",
                  "pattern": "^\\\\d{2}$",
                },
                {
                  "bsonType": "null",
                },
              ],
            },
            "tutelle_2_libe": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "type_rattachement": {
              "bsonType": "string",
            },
            "type_uai": {
              "bsonType": "string",
            },
            "type_uai_libe": {
              "bsonType": "string",
            },
          },
          "required": [
            "nature_uai",
            "nature_uai_libe",
            "type_uai",
            "type_uai_libe",
            "etat_etablissement",
            "etat_etablissement_libe",
            "ministere_tutelle",
            "ministere_tutelle_libe",
            "tutelle_2",
            "tutelle_2_libe",
            "secteur_public_prive",
            "secteur_public_prive_libe",
            "sigle_uai",
            "categorie_juridique",
            "categorie_juridique_libe",
            "contrat_etablissement",
            "contrat_etablissement_libe",
            "categorie_financiere",
            "categorie_financiere_libe",
            "situation_comptable",
            "situation_comptable_libe",
            "niveau_uai",
            "niveau_uai_libe",
            "commune",
            "commune_libe",
            "academie",
            "academie_libe",
            "pays",
            "pays_libe",
            "departement_insee_3",
            "departement_insee_3_libe",
            "denomination_principale",
            "appellation_officielle",
            "patronyme_uai",
            "hebergement_etablissement",
            "hebergement_etablissement_libe",
            "numero_siren_siret_uai",
            "numero_finess_uai",
            "date_fermeture",
            "date_derniere_mise_a_jour",
            "lieu_dit_uai",
            "adresse_uai",
            "boite_postale_uai",
            "code_postal_uai",
            "etat_sirad_uai",
            "localite_acheminement_uai",
            "pays_etranger_acheminement",
            "numero_telephone_uai",
            "numero_telecopieur_uai",
            "mention_distribution",
            "mel_uai",
            "site_web",
            "coordonnee_x",
            "coordonnee_y",
            "appariement",
            "appariement_complement",
            "localisation",
            "localisation_complement",
            "date_geolocalisation",
            "source",
            "numero_uai_trouve",
            "numero_uai_fille",
            "type_rattachement",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
  ],
}
`;

exports[`zodToMongoSchema > should convert source.bcn schema 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "ANCIEN_DIPLOME_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_2": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_4": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_5": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_6": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_DIPLOME_7": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ANCIEN_RECME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "CITE_DOMAINE_DETAILLE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "CITE_DOMAINE_FORMATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_ABROGATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_CREATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_10": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_2": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_4": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_5": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_6": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_7": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_8": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_9": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_DERNIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_FERMETURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_INTERVENTION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_OUVERTURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_PREMIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_SESSION_RATTRAPAGE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GESTIONNAIRE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GROUPE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ID_DOCUMENT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LETTRE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_COURT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_LONG_200": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_STAT_33": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NATURE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NB_MEF_FERME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NB_MEF_OUVERT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_QUALIFICATION_RNCP": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_2": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_4": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_5": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_6": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NOUVEAU_DIPLOME_7": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_CITE_2013_DOMAINE_DETAILL.LIBELLE_EDITION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_GROUPE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_LETTRE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "OBSERVATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "UNITE_CAPITALISABLE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "FORMATION_DIPLOME",
            "NIVEAU_FORMATION_DIPLOME",
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100",
            "GROUPE_SPECIALITE",
            "N_GROUPE_SPECIALITE.LIBELLE_LONG",
            "LETTRE_SPECIALITE",
            "N_LETTRE_SPECIALITE.LIBELLE_LONG",
            "ANCIEN_RECME",
            "LIBELLE_COURT",
            "LIBELLE_STAT_33",
            "LIBELLE_LONG_200",
            "DATE_OUVERTURE",
            "DATE_FERMETURE",
            "UNITE_CAPITALISABLE",
            "DATE_PREMIERE_SESSION",
            "DATE_DERNIERE_SESSION",
            "DATE_ARRETE_CREATION",
            "DATE_ARRETE_ABROGATION",
            "DATE_ARRETE_MODIFICATION_1",
            "DATE_ARRETE_MODIFICATION_2",
            "DATE_ARRETE_MODIFICATION_3",
            "DATE_ARRETE_MODIFICATION_4",
            "DATE_ARRETE_MODIFICATION_5",
            "DATE_ARRETE_MODIFICATION_6",
            "DATE_ARRETE_MODIFICATION_7",
            "DATE_ARRETE_MODIFICATION_8",
            "DATE_ARRETE_MODIFICATION_9",
            "DATE_ARRETE_MODIFICATION_10",
            "COMMENTAIRE",
            "NATURE_FORMATION_DIPLOME",
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100",
            "GESTIONNAIRE_FORMATION_DIPLOME",
            "DATE_INTERVENTION",
            "ID_DOCUMENT",
            "CITE_DOMAINE_FORMATION",
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION",
            "NIVEAU_QUALIFICATION_RNCP",
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG",
            "ANCIEN_DIPLOME_1",
            "ANCIEN_DIPLOME_2",
            "ANCIEN_DIPLOME_3",
            "ANCIEN_DIPLOME_4",
            "ANCIEN_DIPLOME_5",
            "ANCIEN_DIPLOME_6",
            "ANCIEN_DIPLOME_7",
            "NOUVEAU_DIPLOME_1",
            "NOUVEAU_DIPLOME_2",
            "NOUVEAU_DIPLOME_3",
            "NOUVEAU_DIPLOME_4",
            "NOUVEAU_DIPLOME_5",
            "NOUVEAU_DIPLOME_6",
            "NOUVEAU_DIPLOME_7",
            "NB_MEF_OUVERT",
            "NB_MEF_FERME",
            "DATE_SESSION_RATTRAPAGE",
            "OBSERVATION",
            "N_COMMENTAIRE",
            "CITE_DOMAINE_DETAILLE",
            "N_CITE_2013_DOMAINE_DETAILL.LIBELLE_EDITION",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "ANCIEN_RECME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "CITE_DOMAINE_DETAILLE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "CITE_DOMAINE_FORMATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_ABROGATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_CREATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_10": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_2": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_4": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_5": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_6": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_7": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_8": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_9": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_DERNIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_FERMETURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_INTERVENTION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_OUVERTURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_PREMIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DIPLOME_SISE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GESTIONNAIRE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GROUPE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "HABILITATION_ORIGINE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ID_DOCUMENT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LETTRE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_COURT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_LONG_200": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_STAT_33": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NATURE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_QUALIFICATION_RNCP": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NUMERO_UAI": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_CITE_2013_DOMAINE_DETAILL.LIBELLE_EDITION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_DIPLOME_SISE.LIBELLE_INTITULE_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_GROUPE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_LETTRE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "UNITE_CAPITALISABLE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "FORMATION_DIPLOME",
            "NIVEAU_FORMATION_DIPLOME",
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100",
            "GROUPE_SPECIALITE",
            "N_GROUPE_SPECIALITE.LIBELLE_LONG",
            "LETTRE_SPECIALITE",
            "N_LETTRE_SPECIALITE.LIBELLE_LONG",
            "ANCIEN_RECME",
            "LIBELLE_COURT",
            "LIBELLE_STAT_33",
            "LIBELLE_LONG_200",
            "DATE_OUVERTURE",
            "DATE_FERMETURE",
            "UNITE_CAPITALISABLE",
            "DATE_PREMIERE_SESSION",
            "DATE_DERNIERE_SESSION",
            "DATE_ARRETE_CREATION",
            "DATE_ARRETE_ABROGATION",
            "DATE_ARRETE_MODIFICATION_1",
            "DATE_ARRETE_MODIFICATION_2",
            "DATE_ARRETE_MODIFICATION_3",
            "DATE_ARRETE_MODIFICATION_4",
            "DATE_ARRETE_MODIFICATION_5",
            "DATE_ARRETE_MODIFICATION_6",
            "DATE_ARRETE_MODIFICATION_7",
            "DATE_ARRETE_MODIFICATION_8",
            "DATE_ARRETE_MODIFICATION_9",
            "DATE_ARRETE_MODIFICATION_10",
            "COMMENTAIRE",
            "NATURE_FORMATION_DIPLOME",
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100",
            "GESTIONNAIRE_FORMATION_DIPLOME",
            "DATE_INTERVENTION",
            "ID_DOCUMENT",
            "CITE_DOMAINE_FORMATION",
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION",
            "NIVEAU_QUALIFICATION_RNCP",
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG",
            "N_COMMENTAIRE",
            "CITE_DOMAINE_DETAILLE",
            "N_CITE_2013_DOMAINE_DETAILL.LIBELLE_EDITION",
            "DIPLOME_SISE",
            "N_DIPLOME_SISE.LIBELLE_INTITULE_1",
            "HABILITATION_ORIGINE",
            "NUMERO_UAI",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "ANCIEN_NIVEAU": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_FERMETURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_INTERVENTION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_OUVERTURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_COURT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_INTERMINISTERIEL": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_QUALIFICATION_RNCP": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_INTERMINISTERIEL.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "NIVEAU_FORMATION_DIPLOME",
            "LIBELLE_COURT",
            "DATE_OUVERTURE",
            "DATE_FERMETURE",
            "DATE_INTERVENTION",
            "NIVEAU_QUALIFICATION_RNCP",
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG",
            "N_COMMENTAIRE",
            "NIVEAU_INTERMINISTERIEL",
            "N_NIVEAU_INTERMINISTERIEL.LIBELLE_LONG",
            "LIBELLE_100",
            "ANCIEN_NIVEAU",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "data": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "ANCIEN_RECME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "CITE_DOMAINE_FORMATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "COMMENTAIRE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_ABROGATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_CREATION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_1": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_10": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_2": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_3": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_4": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_5": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_6": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_7": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_8": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_ARRETE_MODIFICATION_9": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_DERNIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_FERMETURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_INTERVENTION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_OUVERTURE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "DATE_PREMIERE_SESSION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GESTIONNAIRE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "GROUPE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "ID_DOCUMENT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LETTRE_SPECIALITE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_COURT": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_LONG_200": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "LIBELLE_STAT_33": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NATURE_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_FORMATION_DIPLOME": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "NIVEAU_QUALIFICATION_RNCP": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_GROUPE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_LETTRE_SPECIALITE.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "UNITE_CAPITALISABLE": {
              "bsonType": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "FORMATION_DIPLOME",
            "NIVEAU_FORMATION_DIPLOME",
            "N_NIVEAU_FORMATION_DIPLOME.LIBELLE_100",
            "GROUPE_SPECIALITE",
            "N_GROUPE_SPECIALITE.LIBELLE_LONG",
            "LETTRE_SPECIALITE",
            "N_LETTRE_SPECIALITE.LIBELLE_LONG",
            "ANCIEN_RECME",
            "LIBELLE_COURT",
            "LIBELLE_STAT_33",
            "LIBELLE_LONG_200",
            "DATE_OUVERTURE",
            "DATE_FERMETURE",
            "UNITE_CAPITALISABLE",
            "DATE_PREMIERE_SESSION",
            "DATE_DERNIERE_SESSION",
            "DATE_ARRETE_CREATION",
            "DATE_ARRETE_ABROGATION",
            "DATE_ARRETE_MODIFICATION_1",
            "DATE_ARRETE_MODIFICATION_2",
            "DATE_ARRETE_MODIFICATION_3",
            "DATE_ARRETE_MODIFICATION_4",
            "DATE_ARRETE_MODIFICATION_5",
            "DATE_ARRETE_MODIFICATION_6",
            "DATE_ARRETE_MODIFICATION_7",
            "DATE_ARRETE_MODIFICATION_8",
            "DATE_ARRETE_MODIFICATION_9",
            "DATE_ARRETE_MODIFICATION_10",
            "COMMENTAIRE",
            "NATURE_FORMATION_DIPLOME",
            "N_NATURE_FORMATION_DIPLOME.LIBELLE_100",
            "GESTIONNAIRE_FORMATION_DIPLOME",
            "DATE_INTERVENTION",
            "ID_DOCUMENT",
            "CITE_DOMAINE_FORMATION",
            "N_CITE_DOMAINE_FORMATION.LIBELLE_EDITION",
            "NIVEAU_QUALIFICATION_RNCP",
            "N_NIVEAU_QUALIFICATION_RNCP.LIBELLE_LONG",
          ],
        },
        "date": {
          "bsonType": "date",
        },
        "source": {
          "bsonType": "string",
        },
      },
      "required": [
        "_id",
        "source",
        "date",
        "data",
      ],
    },
  ],
}
`;

exports[`zodToMongoSchema > should convert source.referentiel schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "_meta": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "anomalies": {
          "bsonType": "array",
          "items": {
            "additionalProperties": false,
            "bsonType": "object",
            "properties": {
              "code": {
                "bsonType": "string",
              },
              "date": {
                "bsonType": "string",
              },
              "date_collecte": {
                "bsonType": "string",
              },
              "details": {
                "bsonType": "string",
              },
              "job": {
                "bsonType": "string",
              },
              "key": {
                "bsonType": "string",
              },
              "sources": {
                "bsonType": "array",
                "items": {
                  "anyOf": [
                    {
                      "not": {},
                    },
                    {
                      "bsonType": "string",
                    },
                  ],
                },
              },
              "type": {
                "bsonType": "string",
              },
            },
            "required": [
              "key",
              "type",
              "job",
              "details",
            ],
          },
        },
        "date_collecte": {
          "bsonType": "string",
        },
        "date_dernier_import": {
          "bsonType": "string",
        },
        "date_import": {
          "bsonType": "string",
        },
        "nouveau": {
          "bsonType": "bool",
        },
        "uai_probable": {
          "bsonType": "string",
        },
      },
      "required": [
        "nouveau",
        "anomalies",
      ],
    },
    "adresse": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "academie": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "code": {
              "bsonType": "string",
            },
            "nom": {
              "bsonType": "string",
            },
          },
          "required": [
            "code",
            "nom",
          ],
        },
        "code_insee": {
          "bsonType": "string",
        },
        "code_postal": {
          "bsonType": "string",
        },
        "departement": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "code": {
              "bsonType": "string",
            },
            "nom": {
              "bsonType": "string",
            },
          },
          "required": [
            "code",
            "nom",
          ],
        },
        "geojson": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "geometry": {
              "additionalProperties": false,
              "bsonType": "object",
              "properties": {
                "coordinates": {},
                "type": {
                  "bsonType": "string",
                },
              },
              "required": [
                "type",
              ],
            },
            "properties": {
              "additionalProperties": false,
              "bsonType": "object",
              "properties": {
                "score": {
                  "bsonType": "number",
                },
                "source": {
                  "bsonType": "string",
                },
              },
            },
            "type": {
              "bsonType": "string",
            },
          },
          "required": [
            "type",
            "geometry",
            "properties",
          ],
        },
        "label": {
          "bsonType": "string",
        },
        "localite": {
          "bsonType": "string",
        },
        "region": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "code": {
              "bsonType": "string",
            },
            "nom": {
              "bsonType": "string",
            },
          },
          "required": [
            "code",
            "nom",
          ],
        },
      },
      "required": [
        "code_postal",
        "code_insee",
        "localite",
        "region",
        "academie",
      ],
    },
    "certifications": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "code": {
            "bsonType": "string",
          },
          "date_collecte": {
            "bsonType": "string",
          },
          "label": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
          "type": {
            "bsonType": "string",
          },
        },
        "required": [
          "type",
        ],
      },
    },
    "contacts": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "confirmé": {
            "bsonType": "bool",
          },
          "date_collecte": {
            "bsonType": "string",
          },
          "email": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
        },
      },
    },
    "diplomes": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "code": {
            "bsonType": "string",
          },
          "date_collecte": {
            "bsonType": "string",
          },
          "label": {
            "bsonType": "string",
          },
          "niveau": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
          "type": {
            "bsonType": "string",
          },
        },
        "required": [
          "type",
        ],
      },
    },
    "enseigne": {
      "bsonType": "string",
    },
    "etat_administratif": {
      "bsonType": "string",
      "enum": [
        "actif",
        "fermé",
      ],
    },
    "forme_juridique": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "code": {
          "bsonType": "string",
        },
        "label": {
          "bsonType": "string",
        },
      },
      "required": [
        "code",
        "label",
      ],
    },
    "lieux_de_formation": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "adresse": {
            "additionalProperties": false,
            "bsonType": "object",
            "properties": {
              "academie": {
                "additionalProperties": false,
                "bsonType": "object",
                "properties": {
                  "code": {
                    "bsonType": "string",
                  },
                  "nom": {
                    "bsonType": "string",
                  },
                },
                "required": [
                  "code",
                  "nom",
                ],
              },
              "code_insee": {
                "bsonType": "string",
              },
              "code_postal": {
                "bsonType": "string",
              },
              "departement": {
                "additionalProperties": false,
                "bsonType": "object",
                "properties": {
                  "code": {
                    "bsonType": "string",
                  },
                  "nom": {
                    "bsonType": "string",
                  },
                },
                "required": [
                  "code",
                  "nom",
                ],
              },
              "geojson": {
                "additionalProperties": false,
                "bsonType": "object",
                "properties": {
                  "geometry": {
                    "additionalProperties": false,
                    "bsonType": "object",
                    "properties": {
                      "coordinates": {},
                      "type": {
                        "bsonType": "string",
                      },
                    },
                    "required": [
                      "type",
                    ],
                  },
                  "properties": {
                    "additionalProperties": false,
                    "bsonType": "object",
                    "properties": {
                      "score": {
                        "bsonType": "number",
                      },
                      "source": {
                        "bsonType": "string",
                      },
                    },
                  },
                  "type": {
                    "bsonType": "string",
                  },
                },
                "required": [
                  "type",
                  "geometry",
                  "properties",
                ],
              },
              "label": {
                "bsonType": "string",
              },
              "localite": {
                "bsonType": "string",
              },
              "region": {
                "additionalProperties": false,
                "bsonType": "object",
                "properties": {
                  "code": {
                    "bsonType": "string",
                  },
                  "nom": {
                    "bsonType": "string",
                  },
                },
                "required": [
                  "code",
                  "nom",
                ],
              },
            },
            "required": [
              "code_postal",
              "code_insee",
              "localite",
              "region",
              "academie",
            ],
          },
          "code": {
            "bsonType": "string",
          },
          "date_collecte": {
            "bsonType": "string",
          },
          "siret": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
          "uai": {
            "bsonType": "string",
          },
          "uai_fiable": {
            "bsonType": "bool",
          },
        },
      },
    },
    "nature": {
      "bsonType": "string",
      "enum": [
        "responsable",
        "formateur",
        "responsable_formateur",
        "inconnue",
      ],
    },
    "numero_declaration_activite": {
      "bsonType": "string",
    },
    "qualiopi": {
      "bsonType": "bool",
    },
    "raison_sociale": {
      "bsonType": "string",
    },
    "referentiels": {
      "bsonType": "array",
      "items": {
        "anyOf": [
          {
            "not": {},
          },
          {
            "bsonType": "string",
          },
        ],
      },
    },
    "relations": {
      "bsonType": "array",
      "items": {
        "anyOf": [
          {
            "not": {},
          },
          {
            "additionalProperties": false,
            "bsonType": "object",
            "properties": {
              "date_collecte": {
                "bsonType": "string",
              },
              "label": {
                "bsonType": "string",
              },
              "referentiel": {
                "bsonType": "bool",
              },
              "siret": {
                "bsonType": "string",
              },
              "sources": {
                "bsonType": "array",
                "items": {
                  "anyOf": [
                    {
                      "not": {},
                    },
                    {
                      "bsonType": "string",
                    },
                  ],
                },
              },
              "type": {
                "bsonType": "string",
                "enum": [
                  "formateur->responsable",
                  "responsable->formateur",
                  "entreprise",
                ],
              },
            },
          },
        ],
      },
    },
    "reseaux": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "code": {
            "bsonType": "string",
          },
          "date_collecte": {
            "bsonType": "string",
          },
          "label": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
        },
        "required": [
          "code",
          "label",
        ],
      },
    },
    "siege_social": {
      "bsonType": "bool",
    },
    "siret": {
      "bsonType": "string",
    },
    "uai": {
      "bsonType": "string",
    },
    "uai_potentiels": {
      "bsonType": "array",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "date_collecte": {
            "bsonType": "string",
          },
          "sources": {
            "bsonType": "array",
            "items": {
              "anyOf": [
                {
                  "not": {},
                },
                {
                  "bsonType": "string",
                },
              ],
            },
          },
          "uai": {
            "bsonType": "string",
          },
        },
        "required": [
          "uai",
        ],
      },
    },
  },
  "required": [
    "_id",
    "siret",
    "certifications",
    "contacts",
    "diplomes",
    "lieux_de_formation",
    "nature",
    "referentiels",
    "reseaux",
    "uai_potentiels",
  ],
}
`;

exports[`zodToMongoSchema > should convert users schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "api_key": {
      "bsonType": [
        "string",
        "null",
      ],
      "description": "Clé API",
    },
    "api_key_used_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Date de dernière utilisation de la clé API",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "is_admin": {
      "bsonType": "bool",
    },
    "password": {
      "bsonType": "string",
      "description": "Mot de passe de l'utilisateur",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "password",
    "is_admin",
    "api_key",
    "api_key_used_at",
    "updated_at",
    "created_at",
  ],
}
`;
